# icfpc-2023

./: .editorconfig  .env.example  .gitignore  CMakeLists.txt  README.md  requirements.txt
docker/: runtime.Dockerfile  server.Dockerfile
problems/: download.py
server/: main.py
server/templates/: index.html
src/core/: config.h  models.h  program.h  timer.h
src/solvers/: brute.cpp  starter.cpp
src/tests/: benchmark.cpp  tests.cpp
